# rust-gamejam

./: .gitignore  Cargo.toml  index.html
.github/workflows/: release.yml  validate_rust.yml
assets/: background.ase  building.ron  bullets.ron  chick_attack.ron  chick_hatch.ron  chick_walk.ron  chicken_walk.ron  dog_shoot.ron  dog_walk.ron  main.map  my_material.wgsl  puppy_shoot.ron  puppy_walk.ron  screenshot.ase
assets/config/: chicken_minion.ron  dog_minion.ron
scripts/: make_wasm_build.sh
src/: assets.rs  audio.rs  bullet.rs  debug.rs  enemy.rs  gameover.rs  lib.rs  main.rs  map.rs  menus.rs  minion.rs  particles.rs  player.rs  prelude.rs  spawner.rs  world_ui.rs
