[package]
name = "rust-gamejam"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "trace"
     ] }
bevy-inspector-egui = "0.11"
bevy_asset_loader = { version = "0.11", features = ["2d"] }
heron = { version = "3.1", features = ["2d", "debug-2d"]}
anyhow = "1.0.4"
rand = "0.8.0"
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
