[package]
name = "rust-gamejam"
version = "0.0.9"
edition = "2021"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
     ] }
bevy_kira_audio = { version = "0.10", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.11"
bevy_asset_loader = { version = "0.11", features = ["2d"] }
heron = { version = "3.1", features = ["2d"]}
anyhow = "1.0.4"
rand = "0.8.0"
ron = "0.7.0"
bevy_mod_picking = "0.7"
serde = { version = "1", features = ["derive"] }
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", features = [
    "bevy_renderer",
] }
bevy_tweening = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mapping"
path = "bin/mapping.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[features]
default = ["fast-compile", "fs-watch"]
fast-compile = ["bevy/dynamic"]
fs-watch = ["bevy/filesystem_watcher"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
